# Stack

./: .gitignore
src/aruco/: CMakeLists.txt  package.xml
src/aruco/include/aruco_detector/: aruco_detector_node.hpp
src/aruco/src/: aruco_detector_node.cpp  aruco_node.cpp  camera_publisher.cpp  obstacle_avoidance_node.cpp  obstacle_avoidance_node.cpp.save  search_test_node.cpp
src/arucop/: package.xml  setup.cfg  setup.py
src/arucop/arucop/: aruco_follower.py
src/att/: CMakeLists.txt  package.xml
src/att/src/: att_node.cpp
src/control/: package.xml  setup.py
src/control/control/: menu_node.py  menu_node_fix.py  menu_node_namir.py
src/gps/: package.xml  setup.py
src/imu/: package.xml  setup.py
